<resources>
    <string name="app_name">QuizApp</string>
    <string name="name_hint">Name</string>
    <string name="completion_checkbox">Please tick this checkbox when you have answered all the questions. \nThank You!</string>
    <string name="submit_button">Submit And Grade</string>
    <string name="heading">Android Basics: Revision Quiz Application</string>
    <string name="quizinfo">Hi there Aspiring Android Developer. The following is a revision quiz for the android basics stream. Fill in your name below then answer the questions before hitting the submit button. Enjoy!</string>
    <string name="question1">1. A viewGroup that arranges its children views in a linear fashion is known as a:</string>
    <string name="question1ans1">Relative Layout</string>
    <string name="question1ans2">Constraint Layout</string>
    <string name="question1ans3">Linear Layout</string>
    <string name="question2">2. The attribute names with the prefix \'layout_\' are controlled by:</string>
    <string name="question2ans1">The Child View</string>
    <string name="question2ans2">Java Code</string>
    <string name="question2ans3">The Parent View</string>
    <string name="question3">3. To vertically assign weights to views for an XML layout, which of the following attributes may be used?</string>
    <string name="question3ans1">layout_weight</string>
    <string name="question3ans2">layout_height</string>
    <string name="question3ans3">Both</string>
    <string name="question4">4. To achieve a full-bleed display for an image on the application, the scaleType attribute value may be:</string>
    <string name="question4ans1">centreCrop</string>
    <string name="question4ans2">fullBleed</string>
    <string name="question4ans3">centerBleed</string>
    <string name="question5">5. For the image below, what spacing attribute was used to obtain the background effect?</string>
    <string name="question5ans1">Padding</string>
    <string name="question5ans2">Margin</string>
    <string name="question5ans3">None of the above</string>
    <string name="question6">6. Which of the following descriptions best describe a local variable?</string>
    <string name="question6ans1">This is a variable that is only valid in the method it is defined in</string>
    <string name="question6ans2">This is a variable that is valid for all methods of the application</string>
    <string name="question6ans3">None of the above</string>
    <string name="question7">7. What is the return value of the \'findById(resId)\' method in Java? </string>
    <string name="question7ans1">View</string>
    <string name="question7ans2">Drawable</string>
    <string name="question7ans3">Id</string>
    <string name="question8">8. Which of the following is an example of the control flow statement?</string>
    <string name="question8ans1">If/Else</string>
    <string name="question8ans2">Casting</string>
    <string name="question8ans3">Method Signature</string>
    <string name="question9">9. Which of the following options is considered to be an access modifier for either a class or a method signature?</string>
    <string name="question9ans1">Private</string>
    <string name="question9ans2">Friend</string>
    <string name="question9ans3">Extend</string>
    <string name="question10">10. When making use of an inherited method, which command is used to alter the behaviour of that method?</string>
    <string name="question10ans1">\'@method(modify)\'</string>
    <string name="question10ans2">\'@override\'</string>
    <string name="question10ans3">\'@modify\'</string>
</resources>
